<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup_and_login.RegisterFragment"
    android:id="@+id/register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/title1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="Welcome Back"
            android:textColor="#1D1617"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/gradient"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:hint="@string/Email"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGender1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:background="@drawable/gradient"
                android:hint="@string/Password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@id/ivGender1"
                app:layout_constraintEnd_toStartOf="@+id/ivPassword"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toEndOf="@+id/ivGender1"
                app:layout_constraintTop_toTopOf="@id/ivGender1" />

            <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_hide_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivPassword1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_show_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="forget your password?"
            android:layout_marginTop="3dp"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/gradient1"
            android:text="Login"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:drawableStart="@drawable/ic_vertical_line"
            android:drawableEnd="@drawable/ic_vertical_line"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Or"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cvFacebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="#DDDADA"
                app:strokeWidth="2dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/google" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/cvGoogle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cvGoogle"
                app:layout_constraintTop_toTopOf="@+id/cvGoogle"
                app:strokeColor="#DDDADA"
                app:strokeWidth="2dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_facebook" />


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/end"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Register"
                android:textColor="#C58BF2" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>